// Vitest Snapshot v1

exports[`evaluate > Test error in expression and situation at same time 1`] = `
{
  "situationError": {
    "message": "
[ Erreur syntaxique ]
➡️  Dans la règle \\"situation [test]\\"
✖️  \`\\"42\` n'est pas une expression valide
    invalid syntax at line 1 col 1:

  \\"42
  ^
Unexpected input (lexer error). Instead, I was expecting to see one of the following:

A date token based on:
    Date →  ● %date
    main →  ● Date
A boolean token based on:
    NonNumericTerminal →  ● %boolean
    main →  ● NonNumericTerminal
A string token based on:
    NonNumericTerminal →  ● %string
    main →  ● NonNumericTerminal
A JSONObject token based on:
    JSONObject →  ● %JSONObject
    main →  ● JSONObject
A \\"-\\" based on:
    Negation →  ● \\"-\\" %space Parentheses
    NumericValue →  ● Negation
    main →  ● NumericValue
A word token based on:
    Words →  ● %word
    Variable →  ● Words Variable$ebnf$1
    Date →  ● Variable
    main →  ● Date
A \\"(\\" based on:
    Parentheses →  ● \\"(\\" %space NumericValue %space \\")\\"
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A \\"(\\" based on:
    Parentheses →  ● \\"(\\" NumericValue \\")\\"
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A word token based on:
    WordOrKeyword →  ● %word
    Words →  ● WordOrKeyword Words$ebnf$1
    Variable →  ● Words Variable$ebnf$1
    Date →  ● Variable
    main →  ● Date
A boolean token based on:
    WordOrKeyword →  ● %boolean
    Words →  ● WordOrKeyword Words$ebnf$1
    Variable →  ● Words Variable$ebnf$1
    Date →  ● Variable
    main →  ● Date
A number token based on:
    number →  ● %number
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A number token based on:
    number →  ● %number number$ebnf$1 Unit
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue

",
  },
}
`;

exports[`evaluate > Test invalid syntax in situation 1`] = `
{
  "situationError": {
    "message": "
[ Erreur syntaxique ]
➡️  Dans la règle \\"situation [test]\\"
✖️  \`\\"42\` n'est pas une expression valide
    invalid syntax at line 1 col 1:

  \\"42
  ^
Unexpected input (lexer error). Instead, I was expecting to see one of the following:

A date token based on:
    Date →  ● %date
    main →  ● Date
A boolean token based on:
    NonNumericTerminal →  ● %boolean
    main →  ● NonNumericTerminal
A string token based on:
    NonNumericTerminal →  ● %string
    main →  ● NonNumericTerminal
A JSONObject token based on:
    JSONObject →  ● %JSONObject
    main →  ● JSONObject
A \\"-\\" based on:
    Negation →  ● \\"-\\" %space Parentheses
    NumericValue →  ● Negation
    main →  ● NumericValue
A word token based on:
    Words →  ● %word
    Variable →  ● Words Variable$ebnf$1
    Date →  ● Variable
    main →  ● Date
A \\"(\\" based on:
    Parentheses →  ● \\"(\\" %space NumericValue %space \\")\\"
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A \\"(\\" based on:
    Parentheses →  ● \\"(\\" NumericValue \\")\\"
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A word token based on:
    WordOrKeyword →  ● %word
    Words →  ● WordOrKeyword Words$ebnf$1
    Variable →  ● Words Variable$ebnf$1
    Date →  ● Variable
    main →  ● Date
A boolean token based on:
    WordOrKeyword →  ● %boolean
    Words →  ● WordOrKeyword Words$ebnf$1
    Variable →  ● Words Variable$ebnf$1
    Date →  ● Variable
    main →  ● Date
A number token based on:
    number →  ● %number
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A number token based on:
    number →  ● %number number$ebnf$1 Unit
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue

",
  },
}
`;

exports[`evaluate > Test syntax error in expression 1`] = `
{
  "evaluate": [
    {
      "error": {
        "message": "
[ Erreur syntaxique ]
➡️  Dans la règle \\"evaluation\\"
✖️  \`1+1\` n'est pas une expression valide
    Syntax error at line 1 col 2:

  1+
   ^
Unexpected additionSubstraction token: \\"+\\". Instead, I was expecting to see one of the following:

A space token based on:
    number$ebnf$1$subexpression$1 →  ● %space
    number$ebnf$1 →  ● number$ebnf$1$subexpression$1
    number → %number ● number$ebnf$1 Unit
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A space token based on:
    MultiplicationDivision → MultiplicationDivision ● %space %multiplicationDivision %space Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A space token based on:
    AdditionSubstraction → AdditionSubstraction ● %space %additionSubstraction %space MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A word token based on:
    Words →  ● %word
    UnitNumerator →  ● Words UnitNumerator$ebnf$1
    Unit$ebnf$1 →  ● UnitNumerator
    Unit →  ● Unit$ebnf$1 Unit$ebnf$2
    number → %number number$ebnf$1 ● Unit
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A word token based on:
    WordOrKeyword →  ● %word
    Words →  ● WordOrKeyword Words$ebnf$1
    UnitNumerator →  ● Words UnitNumerator$ebnf$1
    Unit$ebnf$1 →  ● UnitNumerator
    Unit →  ● Unit$ebnf$1 Unit$ebnf$2
    number → %number number$ebnf$1 ● Unit
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A boolean token based on:
    WordOrKeyword →  ● %boolean
    Words →  ● WordOrKeyword Words$ebnf$1
    UnitNumerator →  ● Words UnitNumerator$ebnf$1
    Unit$ebnf$1 →  ● UnitNumerator
    Unit →  ● Unit$ebnf$1 Unit$ebnf$2
    number → %number number$ebnf$1 ● Unit
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A space token based on:
    Comparison → Comparable ● %space %comparison %space Comparable
    main →  ● Comparison
A space token based on:
    UnitDenominator$ebnf$1$subexpression$1 →  ● %space
    UnitDenominator$ebnf$1 →  ● UnitDenominator$ebnf$1$subexpression$1
    UnitDenominator →  ● UnitDenominator$ebnf$1 \\"/\\" Words
    Unit$ebnf$2 → Unit$ebnf$2 ● UnitDenominator
    Unit → Unit$ebnf$1 ● Unit$ebnf$2
    number → %number number$ebnf$1 ● Unit
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A \\"/\\" based on:
    UnitDenominator → UnitDenominator$ebnf$1 ● \\"/\\" Words
    Unit$ebnf$2 → Unit$ebnf$2 ● UnitDenominator
    Unit → Unit$ebnf$1 ● Unit$ebnf$2
    number → %number number$ebnf$1 ● Unit
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A space token based on:
    MultiplicationDivision → MultiplicationDivision ● %space %multiplicationDivision %space Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A space token based on:
    AdditionSubstraction → AdditionSubstraction ● %space %additionSubstraction %space MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A space token based on:
    Comparison → Comparable ● %space %comparison %space Comparable
    main →  ● Comparison

",
      },
    },
  ],
}
`;

exports[`evaluate > Test two syntax error in expression 1`] = `
{
  "evaluate": [
    {
      "error": {
        "message": "
[ Erreur syntaxique ]
➡️  Dans la règle \\"evaluation\\"
✖️  \`1+1\` n'est pas une expression valide
    Syntax error at line 1 col 2:

  1+
   ^
Unexpected additionSubstraction token: \\"+\\". Instead, I was expecting to see one of the following:

A space token based on:
    number$ebnf$1$subexpression$1 →  ● %space
    number$ebnf$1 →  ● number$ebnf$1$subexpression$1
    number → %number ● number$ebnf$1 Unit
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A space token based on:
    MultiplicationDivision → MultiplicationDivision ● %space %multiplicationDivision %space Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A space token based on:
    AdditionSubstraction → AdditionSubstraction ● %space %additionSubstraction %space MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A word token based on:
    Words →  ● %word
    UnitNumerator →  ● Words UnitNumerator$ebnf$1
    Unit$ebnf$1 →  ● UnitNumerator
    Unit →  ● Unit$ebnf$1 Unit$ebnf$2
    number → %number number$ebnf$1 ● Unit
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A word token based on:
    WordOrKeyword →  ● %word
    Words →  ● WordOrKeyword Words$ebnf$1
    UnitNumerator →  ● Words UnitNumerator$ebnf$1
    Unit$ebnf$1 →  ● UnitNumerator
    Unit →  ● Unit$ebnf$1 Unit$ebnf$2
    number → %number number$ebnf$1 ● Unit
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A boolean token based on:
    WordOrKeyword →  ● %boolean
    Words →  ● WordOrKeyword Words$ebnf$1
    UnitNumerator →  ● Words UnitNumerator$ebnf$1
    Unit$ebnf$1 →  ● UnitNumerator
    Unit →  ● Unit$ebnf$1 Unit$ebnf$2
    number → %number number$ebnf$1 ● Unit
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A space token based on:
    Comparison → Comparable ● %space %comparison %space Comparable
    main →  ● Comparison
A space token based on:
    UnitDenominator$ebnf$1$subexpression$1 →  ● %space
    UnitDenominator$ebnf$1 →  ● UnitDenominator$ebnf$1$subexpression$1
    UnitDenominator →  ● UnitDenominator$ebnf$1 \\"/\\" Words
    Unit$ebnf$2 → Unit$ebnf$2 ● UnitDenominator
    Unit → Unit$ebnf$1 ● Unit$ebnf$2
    number → %number number$ebnf$1 ● Unit
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A \\"/\\" based on:
    UnitDenominator → UnitDenominator$ebnf$1 ● \\"/\\" Words
    Unit$ebnf$2 → Unit$ebnf$2 ● UnitDenominator
    Unit → Unit$ebnf$1 ● Unit$ebnf$2
    number → %number number$ebnf$1 ● Unit
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A space token based on:
    MultiplicationDivision → MultiplicationDivision ● %space %multiplicationDivision %space Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A space token based on:
    AdditionSubstraction → AdditionSubstraction ● %space %additionSubstraction %space MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A space token based on:
    Comparison → Comparable ● %space %comparison %space Comparable
    main →  ● Comparison

",
      },
    },
    {
      "error": {
        "message": "
[ Erreur syntaxique ]
➡️  Dans la règle \\"evaluation\\"
✖️  \`\\"42\` n'est pas une expression valide
    invalid syntax at line 1 col 1:

  \\"42
  ^
Unexpected input (lexer error). Instead, I was expecting to see one of the following:

A date token based on:
    Date →  ● %date
    main →  ● Date
A boolean token based on:
    NonNumericTerminal →  ● %boolean
    main →  ● NonNumericTerminal
A string token based on:
    NonNumericTerminal →  ● %string
    main →  ● NonNumericTerminal
A JSONObject token based on:
    JSONObject →  ● %JSONObject
    main →  ● JSONObject
A \\"-\\" based on:
    Negation →  ● \\"-\\" %space Parentheses
    NumericValue →  ● Negation
    main →  ● NumericValue
A word token based on:
    Words →  ● %word
    Variable →  ● Words Variable$ebnf$1
    Date →  ● Variable
    main →  ● Date
A \\"(\\" based on:
    Parentheses →  ● \\"(\\" %space NumericValue %space \\")\\"
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A \\"(\\" based on:
    Parentheses →  ● \\"(\\" NumericValue \\")\\"
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A word token based on:
    WordOrKeyword →  ● %word
    Words →  ● WordOrKeyword Words$ebnf$1
    Variable →  ● Words Variable$ebnf$1
    Date →  ● Variable
    main →  ● Date
A boolean token based on:
    WordOrKeyword →  ● %boolean
    Words →  ● WordOrKeyword Words$ebnf$1
    Variable →  ● Words Variable$ebnf$1
    Date →  ● Variable
    main →  ● Date
A number token based on:
    number →  ● %number
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue
A number token based on:
    number →  ● %number number$ebnf$1 Unit
    NumericTerminal →  ● number
    Parentheses →  ● NumericTerminal
    MultiplicationDivision →  ● Parentheses
    AdditionSubstraction →  ● MultiplicationDivision
    NumericValue →  ● AdditionSubstraction
    main →  ● NumericValue

",
      },
    },
    {
      "missingVariables": {},
      "nodeValue": 42,
      "traversedVariables": [],
      "unit": undefined,
    },
  ],
}
`;
